// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MessageLine - snapshots MessageLine received with messageAddress, no month 1`] = `
<View
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "marginHorizontal": 10,
    }
  }
  testID="m-2"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
        "zIndex": 999,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "backgroundColor": "#5a8c5a",
          "borderBottomEndRadius": 20,
          "borderBottomStartRadius": 0,
          "borderRadius": 20,
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "marginBottom": 5,
          "marginLeft": 0,
          "marginRight": 50,
          "opacity": 1,
          "padding": 10,
        }
      }
    >
      <View
        style={
          {
            "marginTop": 0,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "zIndex": 999,
            }
          }
        >
          <Text
            selectable={true}
            style={
              {
                "color": "#c3c3c3",
                "fontSize": 15,
                "fontWeight": "400",
                "opacity": 1,
              }
            }
          >
            hola
  & 
hello
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-end",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
              "marginHorizontal": 5,
              "opacity": 1,
              "paddingRight": 5,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-end",
                  "flexDirection": "row",
                  "margin": 0,
                  "padding": 0,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#18bd18",
                    "fontSize": 12,
                    "fontWeight": "700",
                    "margin": 0,
                    "padding": 0,
                  }
                }
                testID="undefined.big-part"
              >
                 0.7765
              </Text>
              <Text
                style={
                  {
                    "color": "#18bd18",
                    "fontSize": 8.399999999999999,
                    "margin": 0,
                    "marginBottom": 0.8,
                    "padding": 0,
                  }
                }
                testID="undefined.small-part"
              >
                4321
              </Text>
            </View>
          </View>
        </View>
        <View>
          <Text
            style={
              {
                "color": "#c3c3c3",
                "opacity": 0.65,
              }
            }
          >
            Jan 1, 12:00 am
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <
              color="#18bd18"
              icon={
                {
                  "icon": [
                    512,
                    512,
                    [
                      61533,
                      "check-circle",
                    ],
                    "f058",
                    "M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z",
                  ],
                  "iconName": "circle-check",
                  "prefix": "fas",
                }
              }
              size={12}
              style={
                {
                  "marginLeft": 5,
                  "marginRight": 1,
                  "marginTop": 2,
                }
              }
            />
            <
              color="#18bd18"
              icon={
                {
                  "icon": [
                    512,
                    512,
                    [
                      61533,
                      "check-circle",
                    ],
                    "f058",
                    "M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z",
                  ],
                  "iconName": "circle-check",
                  "prefix": "fas",
                }
              }
              size={12}
              style={
                {
                  "marginLeft": 1,
                  "marginRight": 0,
                  "marginTop": 2,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`MessageLine - snapshots MessageLine sent with memo, month header 1`] = `
<View
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "marginHorizontal": 10,
    }
  }
  testID="m-1"
>
  <View
    style={
      {
        "backgroundColor": "#011401",
        "borderBottomWidth": 1,
        "borderColor": "#011401",
        "borderTopWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 15,
        "paddingTop": 5,
      }
    }
  >
    <Text
      style={
        {
          "color": "#c3c3c3",
          "opacity": 0.65,
        }
      }
    >
      January 2024
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
        "zIndex": 999,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "backgroundColor": "#233623",
          "borderBottomEndRadius": 0,
          "borderBottomStartRadius": 20,
          "borderRadius": 20,
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "marginBottom": 5,
          "marginLeft": 50,
          "marginRight": 0,
          "opacity": 1,
          "padding": 10,
        }
      }
    >
      <View
        style={
          {
            "marginBottom": 10,
            "marginLeft": 30,
            "marginTop": -10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "column",
                "marginRight": 10,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "display": "flex",
                    "flexDirection": "column",
                    "flexWrap": "wrap",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 15,
                      "fontWeight": "400",
                      "opacity": 1,
                    }
                  }
                >
                  sent-ad...4567890
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "marginTop": 0,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "zIndex": 999,
            }
          }
        >
          <Text
            selectable={true}
            style={
              {
                "color": "#c3c3c3",
                "fontSize": 15,
                "fontWeight": "400",
                "opacity": 1,
              }
            }
          >
            hola
  & 
hello
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-end",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
              "marginHorizontal": 5,
              "opacity": 1,
              "paddingRight": 5,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-end",
                  "flexDirection": "row",
                  "margin": 0,
                  "padding": 0,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "fontSize": 12,
                    "fontWeight": "700",
                    "margin": 0,
                    "padding": 0,
                  }
                }
                testID="undefined.big-part"
              >
                 0.1234
              </Text>
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "fontSize": 8.399999999999999,
                    "margin": 0,
                    "marginBottom": 0.8,
                    "padding": 0,
                  }
                }
                testID="undefined.small-part"
              >
                5678
              </Text>
            </View>
          </View>
        </View>
        <View>
          <Text
            style={
              {
                "color": "#c3c3c3",
                "opacity": 0.65,
              }
            }
          >
            Jan 1, 12:00 am
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <
              color="#18bd18"
              icon={
                {
                  "icon": [
                    512,
                    512,
                    [
                      61533,
                      "check-circle",
                    ],
                    "f058",
                    "M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z",
                  ],
                  "iconName": "circle-check",
                  "prefix": "fas",
                }
              }
              size={12}
              style={
                {
                  "marginLeft": 5,
                  "marginRight": 1,
                  "marginTop": 2,
                }
              }
            />
            <
              color="#18bd18"
              icon={
                {
                  "icon": [
                    512,
                    512,
                    [
                      61533,
                      "check-circle",
                    ],
                    "f058",
                    "M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z",
                  ],
                  "iconName": "circle-check",
                  "prefix": "fas",
                }
              }
              size={12}
              style={
                {
                  "marginLeft": 1,
                  "marginRight": 0,
                  "marginTop": 2,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
